Views a11y: Convert View's NativeViewAccessibility to a unique_ptr.

Currently, instances of NativeViewAccessibility depend on
NativeViewAccessibility::Destroy() being called in order to be released. By
converting the Views NativeViewAccessibility member to a unique_ptr, it will be
automatically destroyed with its corresponding View.

BUG=610589

Review-Url: https://codereview.chromium.org/2718073003
Cr-Commit-Position: refs/heads/master@{#454808}

Former-commit-id: 28468e05efc7fde6e9201a29a25b2f8904b5b5e4